clusters/labinfra/apps/coder.xuperson.org/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    app.kubernetes.io/name: coder
    app.kubernetes.io/component: control-plane
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspaces
  labels:
    app.kubernetes.io/name: coder
    app.kubernetes.io/component: workspaces
